Revert "fix: handle operations labels that are too long"
This reverts commit 50d7aa9c30927c1837e7d7c323ed56c6b3db2855.

--- a/src/ducks/transactions/Transactions.styl
+++ b/src/ducks/transactions/Transactions.styl
@@ -32,9 +32,6 @@
     .bnk-op-caticon
         cursor pointer
 
-    .bnk-op-label
-        max-width 100%
-
     +medium-screen()
         .bnk-op-desc
             cursor pointer
